# 2log-dot

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions-OTA-4MB.csv  sdkconfig
components/neopixelbus/: CMakeLists.txt  NeoPixelBrightnessBus.h  NeoPixelBus.h
components/neopixelbus/compat/: WString.cpp  WString.h  pgmspace.h
components/neopixelbus/internal/: Esp32_i2s.c  Esp32_i2s.h  HsbColor.h  HslColor.h  HtmlColor.h  HtmlColorNameStrings.h  NeoEsp32I2sMethod.h  NeoEsp32RmtMethod.h  RgbColor.h  RgbwColor.h
components/pn532/: pn532.c  pn532.h
docker/: build.dockerfile
main/: Animations.cpp  Animations.h  BuildConfig.h  CMakeLists.txt  CardReader.cpp  CardReader.h  CardReaderEventHandler.cpp  CardReaderEventHandler.h  Dot.cpp  Dot.h  main.cpp
