idf_component_register(SRCS 	
	"NeoPixelBus.h"
	"internal/HtmlColorNameStrings.h"
	"internal/RgbColor.h"
	"internal/HtmlColor.cpp"
	"internal/HtmlColorNames.cpp"
	"internal/HtmlColorShortNames.cpp"
	"internal/NeoEsp32I2sMethod.h"
	"internal/HtmlColorNameStrings.cpp"
	"internal/RgbColor.cpp"
	"internal/HsbColor.h"
	"internal/HslColor.h"
	"internal/HtmlColor.h"
	"internal/NeoBufferContext.h"
	"internal/RgbwColor.cpp"
	"internal/HslColor.cpp"
	"internal/RgbwColor.h"
	"internal/HsbColor.cpp"
	"internal/Esp32_i2s.h"
	"internal/Esp32_i2s.c"
	"internal/NeoColorFeatures.h"
	"internal/NeoEsp32RmtMethod.h"
	"NeoPixelBrightnessBus.h"
	"compat/pgmspace.h"
	"compat/WString.cpp"
	"compat/WString.h"
	"compat/stdlib_noniso.h"
	"compat/stdlib_noniso.c"
    INCLUDE_DIRS ".")
